# 3d_object_detection

./: .gitignore  CMakeLists.txt  README.md  documentacion.txt  evaluation.cpp  find_features.cpp  find_keypoints.cpp  shot_evaluate_piggy-sin_ICP-con_radio.txt
experiments/: Untitled.m  sc_evaluate_mug-sin_ICP-con_radio.txt  sc_evaluate_piggy-sin_ICP-con_radio.txt  shot_color_evaluate_piggy-sin_ICP-con_radio.txt  shot_evaluate_plant-sin_ICP-con_radio.txt
experiments/Figs/: fpfhevaluatepiggy.fig  fpfhevaluateplant.fig  fpfhevaluateplc.fig  shotcolorevaluatemug.fig  shotcolorevaluatepiggy.fig
experiments/csv/: shot_color_evaluate_plant.csv  shot_evaluate_piggy.csv
experiments/final_experiments/: Untitled.mlx  cshot_mug_icp.txt  cshot_plant_icp.txt  exp_icp_and_no-icp.m  exp_rad.m  media.m  middle_samples.m  middle_samples.m~  wks_cshot.mat
experiments/first_experiments/: csv_wks1.mat
experiments/test/: fpfh_evaluate_piggy-sin_ICP-con_radio.txt  (+8 more)
ground_truth/: mug_ground_truth.pcd  pcl_ground_truth.pcd  piggy_ground_truth.pcd  plant_ground_truth.pcd
headers/: descriptors.h  features.h  keypoints.h  tools.h
include/: descriptors.h  keypoints.h  tools.h
objects/: Milk_downsampled_normals.pcd  Plant_downsampled.pcd  colacao_cloud_downsampled.pcd  s0_mug_corr.pcd  s0_piggybank_corr.pcd  s0_plant_corr.pcd  s0_plc_corr.pcd  tasmanian_cloud_downsampled.pcd
scenes/: scan_10.pcd  scan_2.pcd  scan_3.pcd  scan_4.pcd  scan_5.pcd  scan_6.pcd  scan_7.pcd  scan_8.pcd  scan_9.pcd
src/: escena_final.cpp  evaluation.cpp  planar_segmentation.cpp
(+38 files in other folders)
